Shang New Live/src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Level__c.Property__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Level__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atrium</fullName>
                </value>
                <value>
                    <fullName>Car Park</fullName>
                </value>
                <value>
                    <fullName>Corridor</fullName>
                </value>
                <value>
                    <fullName>Customer Service Counter</fullName>
                </value>
                <value>
                    <fullName>Escalator</fullName>
                </value>
                <value>
                    <fullName>Facade</fullName>
                </value>
                <value>
                    <fullName>Lift Lobby</fullName>
                </value>
                <value>
                    <fullName>Lobby</fullName>
                </value>
                <value>
                    <fullName>Main Atrium</fullName>
                </value>
                <value>
                    <fullName>Promo Hall</fullName>
                </value>
                <value>
                    <fullName>Side Atrium</fullName>
                </value>
                <value>
                    <fullName>Stairway</fullName>
                </value>
                <value>
                    <fullName>Toilet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <label>Mobile Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <description>Quantity in Location</description>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Intervals_days__c</fullName>
        <label>Service Intervals (days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Intervals_months__c</fullName>
        <label>Service Intervals (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servicing_Description__c</fullName>
        <label>Servicing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Start_Date__c</fullName>
        <label>Servicing Start Date</label>
        <type>Date</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JC_Location</fullName>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Location_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Mobile_Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Junction City</value>
        </filters>
        <label>JC Location</label>
    </listViews>
    <listViews>
        <fullName>JMT_Location</fullName>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Location_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Junction Maw Tin</value>
        </filters>
        <label>JMT Location</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>